<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="bold"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_bg"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvWeight"
        android:layout_width="310dp"
        android:layout_height="145dp"
        app:cardBackgroundColor="@color/card_bg"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp"
        app:cardMaxElevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/weight_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hapticFeedbackEnabled="false"
                android:text="@string/w_txt"
                android:textColor="@color/text_hint"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.127"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.141" />

            <EditText
                android:id="@+id/weight_et"
                android:layout_width="134dp"
                android:layout_height="84dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/w_num"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/text_hint"
                android:textSize="60sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.17"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.983"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/kg_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/kg_txt"
                android:textColor="@color/text_hint"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.583"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.982" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="310dp"
        android:layout_height="145dp"
        app:cardBackgroundColor="@color/card_bg"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp"
        app:cardMaxElevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.435">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Height_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hapticFeedbackEnabled="false"
                android:text="@string/H_txt"
                android:textColor="@color/text_hint"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.127"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.141" />

            <EditText
                android:id="@+id/Height_et"
                android:layout_width="134dp"
                android:layout_height="84dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/w_num"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/text_hint"
                android:textSize="60sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.17"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.983" />

            <TextView
                android:id="@+id/et_cm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/centi_txt"
                android:textColor="@color/text_hint"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.991" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/cal_btn"
        android:layout_width="310dp"
        android:layout_height="70dp"
        android:text="@string/cal"
        android:textAllCaps="false"
        android:textSize="34sp"
        android:textStyle="bold"
        app:backgroundTint="@color/teal_700"
        app:cornerRadius="15dp"
        app:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.626" />

    <androidx.cardview.widget.CardView
        android:layout_width="310dp"
        android:layout_height="170dp"
        app:cardBackgroundColor="@color/card_bg"
        app:cardCornerRadius="15dp"
        app:cardElevation="20dp"
        app:cardMaxElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_index"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/text_hint"
                android:textSize="60sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/tv_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/text_hint"
                android:textSize="20sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>